--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "@babel/helper-define-polyfill-provider": "^0.6.4",
     "@expo/ngrok": "^4.1.3",
     "@expo/vector-icons": "^14.1.0",
+    "@react-native-community/datetimepicker": "8.2.0",
+    "@react-native-picker/picker": "^2.11.0",
     "@react-navigation/bottom-tabs": "^7.3.3",
     "@react-navigation/native": "^7.0.19",
     "@react-navigation/stack": "^7.2.3",
@@ -35,11 +37,15 @@
     "expo-system-ui": "~4.0.8",
     "expo-web-browser": "~14.0.2",
     "react": "18.3.1",
+    "react-calendar": "^5.1.0",
     "react-dom": "18.3.1",
     "react-native": "0.76.7",
     "react-native-ble-plx": "^3.5.0",
     "react-native-bluetooth-classic": "^1.73.0-rc.13",
+    "react-native-date-picker": "^5.0.12",
+    "react-native-datepicker": "^1.7.2",
     "react-native-gesture-handler": "~2.20.2",
+    "react-native-modal-datetime-picker": "^18.0.0",
     "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "^4.12.0",
     "react-native-screens": "~4.4.0",
