--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "react-native-bluetooth-classic": "^1.73.0-rc.13",
     "react-native-date-picker": "^5.0.12",
     "react-native-datepicker": "^1.7.2",
+    "react-native-dropdown-picker": "^5.4.6",
     "react-native-gesture-handler": "~2.20.2",
     "react-native-modal-datetime-picker": "^18.0.0",
     "react-native-reanimated": "~3.16.1",
